feat(device) detect brand DEXP model: B450 feat(device) detect brand Ergo model: B504 Unit 4G feat(device) detect brand Ace model: Buzz 1 Plus
issue #6355

--- a/regexes/device/mobiles.yml
+++ b/regexes/device/mobiles.yml
@@ -7,11 +7,13 @@
 
 # Ace (https://www.acemobile.fr/)
 Ace:
-  regex: 'BUZZ 1 Lite'
+  regex: 'BUZZ 1 (?:Lite|Plus)'
   device: 'smartphone'
   models:
     - regex: 'BUZZ 1 Lite'
       model: 'Buzz 1 Lite'
+    - regex: 'BUZZ 1 Plus'
+      model: 'Buzz 1 Plus'
 
 'Tunisie Telecom':
   regex: 'StarTrail TT[);/ ]'
@@ -3729,7 +3731,7 @@ Desay:
 
 # DEXP
 DEXP:
-  regex: 'DEXP|(?:Ursus|Ixion)[ _]([^;/)]+)|H135[ _]Build|(F4[38]D8000K|VA[12]10|ML450|MS[56]50|BL[12]50|BS155|BS160|BS[1256]50|AL[12]40|AS260)[);/ ]'
+  regex: 'DEXP|(?:Ursus|Ixion)[ _]([^;/)]+)|H135[ _]Build|(F4[38]D8000K|VA[12]10|ML450|MS[56]50|BL[12]50|BS155|BS160|BS[1256]50|AL[12]40|AS260| B450)[);/ ]'
   device: 'smartphone'
   models:
 
@@ -3747,6 +3749,9 @@ DEXP:
     - regex: '(VA[21]10)[);/ ]'
       model: 'Ursus $1'
       device: 'tablet'
+
+    - regex: ' (B450)[);/ ]'
+      model: '$1'
 
     - regex: 'H135[ _]Build'
       model: 'Atlas'
@@ -4645,7 +4650,7 @@ Sony:
 
 # Ergo
 Ergo:
-  regex: 'ERGO|(V550[_ ]Vision|B502 Basic|B504[_ ]Unit|A502[_ ]Aurum|A503[ _]Optima|Prime B400|A551 Sky 4G|A553 Power|A555 Universe|Force F500|GoTab GBT9|GoTab Gti8|V551[ _]Aura|V540_Level|V570_BIG_BEN|B506[_ ]INTRO|A503-Optima)'
+  regex: 'ERGO|(V550[_ ]Vision|B502 Basic|B504[_ ]Unit|A502[_ ]Aurum|A503[ _]Optima|Prime B400|A551 Sky 4G|A553 Power|A555 Universe|Force F500|GoTab GBT9|GoTab Gti8|V551[ _]Aura|V540_Level|V570_BIG_BEN|B506[_ ]INTRO|A503-Optima|B505_Unit_4G)'
   device: 'smartphone'
   models:
     - regex: 'B502 Basic'
@@ -4658,6 +4663,8 @@ Ergo:
       model: 'V550 Vision'
     - regex: 'B504[_ ]Unit'
       model: 'B504 Unit'
+    - regex: 'B505_Unit_4G'
+      model: 'B504 Unit 4G'
     - regex: 'V551[ _]Aura'
       model: 'V551 Aura'
     - regex: 'V540_Level'
