--- a/Tests/fixtures/smartphone-16.yml
+++ b/Tests/fixtures/smartphone-16.yml
@@ -6899,3 +6899,64 @@
     model: Capture Plus
   os_family: Android
   browser_family: Chrome
+-
+  user_agent: Mozilla/5.0 (Linux; Android 8.1.0; B450) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/80.0.3987.87 Mobile Safari/537.36
+  os:
+    name: Android
+    short_name: AND
+    version: 8.1.0
+    platform: ""
+  client:
+    type: browser
+    name: Chrome Mobile
+    short_name: CM
+    version: 80.0.3987.87
+    engine: Blink
+    engine_version: ""
+  device:
+    type: smartphone
+    brand: DX
+    model: B450
+  os_family: Android
+  browser_family: Chrome
+-
+  user_agent: Mozilla/5.0 (Linux; Android 8.1.0; B505_Unit_4G) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/80.0.3987.87 Mobile Safari/537.36
+  os:
+    name: Android
+    short_name: AND
+    version: 8.1.0
+    platform: ""
+  client:
+    type: browser
+    name: Chrome Mobile
+    short_name: CM
+    version: 80.0.3987.87
+    engine: Blink
+    engine_version: ""
+  device:
+    type: smartphone
+    brand: E7
+    model: B504 Unit 4G
+  os_family: Android
+  browser_family: Chrome
+-
+  user_agent: Mozilla/5.0 (Linux; Android 8.1.0; BUZZ 1 Plus) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/76.0.3809.132 Mobile Safari/537.36
+  os:
+    name: Android
+    short_name: AND
+    version: 8.1.0
+    platform: ""
+  client:
+    type: browser
+    name: Chrome Mobile
+    short_name: CM
+    version: 76.0.3809.132
+    engine: Blink
+    engine_version: ""
+  device:
+    type: smartphone
+    brand: AE
+    model: Buzz 1 Plus
+  os_family: Android
+  browser_family: Chrome
+
