--- a/regexes/device/mobiles.yml
+++ b/regexes/device/mobiles.yml
@@ -1067,7 +1067,7 @@ Arian Space:
 
 # Alcatel
 Alcatel:
-  regex: 'Alcatel|Alc(?!or )[a-z0-9]+|One[ _]?Touch|idol3|(?:4003[AJ]|4009[ADEFIKMSX]|4013[DEJKMX]|4014[ADEKMX]|4015[ADNTX]|4016[ADX]|4017[ADEFSX]|4018[ADEFMX]|4024[EDX]|4027[ADNX]|4028[AEJS]|4032[ADEX]|4034[ADEFGX]|4035[ADXY]|4045[ADEX]|4047[ADFGNX]|4049[DEGMX]|4060[SW]|A466BG|A621BL|4114E|5001[ADJTU](?:_EEA|_RU)?|5009[AD]|5010[DEGSUX]|5011A|5012[DFG]|5015[ADEX]|5016[AXJ]|5017[ABDEOX]|5019D|5022[EDX]|5023[EF]|5024[ADJ](?:_RU|_EEA)?|5025[DEG]|5026[ADJ]|5027B|5028A|5032W|5033[AX]|5033[DJ](?:[ _]RU)?|5034D(_RU)?|5038[ADEX]|5041[CD]|5042[ADEFGWX]|5044[ADGIKOPSTY]|5045[ADFGIJTXY]|5046[ADGIJSTUY]|5047[DIUY]|5048A|5049[EGSWZ]|5050[ASXY]|5051[ADEJMTWX]|5052[AD](_RU)?|5053A|5054[ADNSTWX]|5056[ADEGIJMNTUWX]|5057M|5058[AIY](_RU)?|5059[ADXYZ](_RU)?|5065[ADNWX]|5070D|5080[ADFQUX]|5085[ABCDGHIJNOQY]|5086[ADY]|5090[AIY]|5095[IKY]|5098[OS]|5099[ADYUI](_RU)?|5116J|5145A|6016[ADEX]|6036[AXY]|6037[BKY]|6039[AHJKY]|6043[AD]|6044D|6045[BFIKOY]|6050[AFY]|6055[ABDHIKPUYZ]|6058[ADX]|6060S|6062W|6070K|7040[ADEFKRT]|7041[DX]|7043[AEKY]|7044[AX]|7045Y|7048[ASWX]|7055A|7070X|8030Y|8050[DEGX]|8063|9001[DIX]|9002X|9003[AX]|9024O|9005X|9026X|9007[ATX]|9008[ADIJNTUX]|9010X|9022X|9027[FTWX]|9203A|A570BL|I213|I216X|A50[13]DL|A574BL|A57[17]VL|A464BG|5028Y[_ ]EEA|5048Y[_ ]EEA)[);/ ]|TIMXL'
+  regex: 'Alcatel|Alc(?!or )[a-z0-9]+|One[ _]?Touch|idol3|(?:4003[AJ]|4009[ADEFIKMSX]|4013[DEJKMX]|4014[ADEKMX]|4015[ADNTX]|4016[ADX]|4017[ADEFSX]|4018[ADEFMX]|4024[EDX]|4027[ADNX]|4028[AEJS]|4032[ADEX]|4034[ADEFGX]|4035[ADXY]|4045[ADEX]|4047[ADFGNX]|4049[DEGMX]|4060[SW]|A466BG|A621BL|4114E|5001[ADJTU](?:_EEA|_RU)?|5009[AD]|5010[DEGSUX]|5011A|5012[DFG]|5015[ADEX]|5016[AXJ]|5017[ABDEOX]|5019D|5022[EDX]|5023[EF]|5024[ADJ](?:_RU|_EEA)?|5025[DEG]|5026[ADJ]|5027B|5028A|5032W|5033[AX]|5033[DJ](?:[ _]RU)?|5034D(_RU)?|5036D|5038[ADEX]|5041[CD]|5042[ADEFGWX]|5044[ADGIKOPSTY]|5045[ADFGIJTXY]|5046[ADGIJSTUY]|5047[DIUY]|5048A|5049[EGSWZ]|5050[ASXY]|5051[ADEJMTWX]|5052[AD](_RU)?|5053A|5054[ADNSTWX]|5056[ADEGIJMNTUWX]|5057M|5058[AIY](_RU)?|5059[ADXYZ](_RU)?|5065[ADNWX]|5070D|5080[ADFQUX]|5085[ABCDGHIJNOQY]|5086[ADY]|5090[AIY]|5095[IKY]|5098[OS]|5099[ADYUI](_RU)?|5116J|5145A|6016[ADEX]|6036[AXY]|6037[BKY]|6039[AHJKY]|6043[AD]|6044D|6045[BFIKOYX]|6050[AFY]|6055[ABDHIKPUYZ]|6058[ADX]|6060S|6062W|6070K|7040[ADEFKRT]|7041[DX]|7042A|7043[AEKY]|7044[AX]|7045Y|7048[ASWX]|7053D|7055A|7070X|8030Y|8050[DEGX]|8063|9001[DIX]|9002X|9003[AX]|9024O|9005X|9026X|9007[ATX]|9008[ADIJNTUX]|9010X|9022X|9027[FTWX]|9203A|A570BL|I213|I216X|A50[13]DL|A574BL|A57[17]VL|A464BG|5028Y[_ ]EEA|5048Y[_ ]EEA)[);/ ]|TIMXL'
   device: 'smartphone'
   models:
     - regex: '(?:5022[EDX]|5070D)[);/ ]'
@@ -1082,7 +1082,9 @@ Alcatel:
       model: 'One Touch Pop C2'
     - regex: '4032[DE][);/ ]'
       model: 'One Touch Pop C2 Dual SIM'
-    - regex: '(?:7040[AFK]|7041X)[);/ ]'
+    - regex: '5036D[);/ ]'
+      model: 'One Touch Pop C5 Dual SIM'
+    - regex: '(?:7040[AFK]|7041X|7042A)[);/ ]'
       model: 'One Touch Pop C7'
     - regex: '(?:7040[DE]|7041D)[);/ ]'
       model: 'One Touch Pop C7 Dual SIM'
@@ -1154,7 +1156,7 @@ Alcatel:
       model: 'One Touch Idol 2S'
     - regex: '6039[AHJKY][);/ ]|idol3'
       model: 'One Touch Idol 3'
-    - regex: '6045[BFIKOY][);/ ]'
+    - regex: '6045[BFIKOYX][);/ ]'
       model: 'One Touch Idol 3 5.5"'
     - regex: '6055[ABDHIKPUYZ][);/ ]'
       model: 'One Touch Idol 4'
@@ -1170,6 +1172,8 @@ Alcatel:
       model: 'One Touch Hero 2'
     - regex: '7055A[);/ ]'
       model: 'One Touch Hero 2C'
+    - regex: '7053D[);/ ]'
+      model: 'One Touch X1'
     - regex: '5065N[);/ ]'
       model: 'TRU'
     - regex: 'A574BL[);/ ]'
@@ -7447,7 +7451,7 @@ Lenco:
 
 # lenovo
 Lenovo:
-  regex: '(?:LNV-)?Lenovo|IdeaTab|IdeaPad|Thinkpad|Yoga Tablet|Tab2A[0-9]-[0-9]{2}[a-z]?|TB2-X30L|TB3-710I|YT3-X50[ML]|ZUK[ -_]|K50a40|TB-(8504F|X304F|X704V|X704A)|A2107A-H|S6000[ ;)]|(Z2 Plus|VIBE Z2|Vibe K5( Plus)?|P2A42|L18011|[67]01LV|Z2131|K350t)[/;) ]'
+  regex: '(?:LNV-)?Lenovo|IdeaTab|IdeaPad|Thinkpad|Yoga Tablet|Tab2A[0-9]-[0-9]{2}[a-z]?|TB2-X30L|TB3-710I|YT3-X50[ML]|ZUK[ -_]|K50a40|TB-(8504F|X304F|X704V|X704A)|A2107A-H|S6000[ ;)]|(Z2 Plus|VIBE Z2|Vibe K5( Plus)?|P2A42|L18011|[67]01LV|Z2131|K350t|VIBE X2)[/;) ]'
   device: 'smartphone'
   models:
     - regex: 'Lenovo ?G780'
@@ -7596,6 +7600,8 @@ Lenovo:
       model: 'Vibe K5'
     - regex: 'VIBE Z2[);/ ]'
       model: 'Vibe Z2'
+    - regex: 'VIBE X2[);/ ]'
+      model: 'Vibe X2'
     - regex: 'k33a48[/;) ]'
       model: 'K6'
     - regex: 'P2A42[);/ ]'
@@ -11929,13 +11935,13 @@ Spice:
 
 # Sharp (jp.sharp)
 Sharp:
-  regex: 'SHARP|SBM|SH-?[0-9]+[a-z]?[);/ ]|AQUOS|(?:SH-M0[589]|S[35]-SH|SH-Z(10|01)|SH-[CL]02|[45]02SH|[36]05SH|70[126]SH|80[18]SH|901SH|50[67]SH|SHL22|SHV4[0-7]|SHV3[5689]|FS80(?:1[08]|32|28|0[29])|TG-L900S|509SH|NP601SH)[);/ ]'
+  regex: 'SHARP|SBM|SH-?[0-9]+[a-z]?[);/ ]|AQUOS|(?:SH-M0[589]|S[35]-SH|SH-Z(10|01)|SH-[CL]02|[45]02SH|[36]05SH|70[126]SH|80[18]SH|901SH|50[3679]SH|SHL22|SHV4[0-7]|SHV3[5689]|FS80(?:1[08]|32|28|0[29])|TG-L900S|NP601SH)[);/ ]'
   device: 'smartphone'
   models:
     # explicit smartphone models
     - regex: '506SH[);/ ]'
       model: 'Aquos Xx3'
-    - regex: '502SH[);/ ]'
+    - regex: '50[23]SH[);/ ]'
       model: 'Aquos Xx2'
     - regex: '507SH[);/ ]'
       model: 'One'
@@ -16064,3 +16070,9 @@ Tele2:
         model: 'Mini 1.1'
       - regex: 'Tele2[ _](Midi[ _]1\.1|Mini)[);/ ]'
         model: '$1'
+
+# Alfawise
+Alfawise:
+  regex: '(A95X_R1)[);/ ]'
+  device: 'tv'
+  model: '$1'
