--- a/regexes/device/mobiles.yml
+++ b/regexes/device/mobiles.yml
@@ -11139,6 +11139,9 @@ Samsung:
     - regex: '(?:SAMSUNG[- ])?(?:SM-N980(?:F|F/DS))'
       model: 'GALAXY Note 20'
       device: 'phablet'
+    - regex: '(?:SAMSUNG[- ])?(?:SM-N985(?:F|F/DS))'
+      model: 'GALAXY Note 20 Ultra'
+      device: 'phablet'
 
     # explicit feature phones
     - regex: '(?:SAMSUNG-)?GT-E2152'
