feat(device) detect Samsung Galaxy Note 20 Ultra 5G

--- a/regexes/device/mobiles.yml
+++ b/regexes/device/mobiles.yml
@@ -11142,6 +11142,9 @@ Samsung:
     - regex: '(?:SAMSUNG[- ])?(?:SM-N985(?:F|F/DS))'
       model: 'GALAXY Note 20 Ultra'
       device: 'phablet'
+    - regex: '(?:SAMSUNG[- ])?(?:SM-N986(?:[B|U|W]|B/DS|U1))'
+      model: 'GALAXY Note 20 Ultra 5G'
+      device: 'phablet'
 
     # explicit feature phones
     - regex: '(?:SAMSUNG-)?GT-E2152'
