feat(device) detect Samsung Galaxy Note 20 Ultra 5G

--- a/regexes/device/mobiles.yml
+++ b/regexes/device/mobiles.yml
@@ -11142,7 +11142,7 @@ Samsung:
     - regex: '(?:SAMSUNG[- ])?(?:SM-N985(?:F|F/DS))'
       model: 'GALAXY Note 20 Ultra'
       device: 'phablet'
-    - regex: '(?:SAMSUNG[- ])?(?:SM-N986(?:[B|U|W]|B/DS|U1))'
+    - regex: '(?:SAMSUNG[- ])?(?:SM-N986(?:[B|N|U|W]|B/DS|U1))'
       model: 'GALAXY Note 20 Ultra 5G'
       device: 'phablet'
 
