fix(device) detect brand Samsung model: GALAXY Tab A 8.0" with S Pen (2019) LTE (SM-P205) feat(device) detect brand Samsung models:GALAXY Tab A 8.0" with S Pen (2019) WiFi (SM-P200),  GALAXY A6s (2018) (SM-G6200), GALAXY Note 5 (SM-N920R6), GALAXY Tab S2 8.0" LTE (SM-T715N0),  GALAXY Tab S2 8.0" LTE (SM-T715C), GALAXY CORE 2 (SM-G355M), GALAXY A7 (SM-A7009),  GALAXY Ace 4 Duos (SM-G316M), GALAXY V Plus (SM-G318MZ), GALAXY A70 (SM-A705X),  GALAXY Fold (SM-F9000), GALAXY Xcover 4 (SM-G390Y), GALAXY S8 Lite (SM-G8750),  GALAXY S7 (SM-G930), GALAXY S10 (SM-G977T), GALAXY Tab E 8.0" (SM-T378V),  GALAXY Tab A 8.0" LTE (2018) (SM-T387AA), GALAXY Tab S4 10.5" WiFi (SM-T837R4),  ALAXY Tab S6 10.5" LTE (SM-T867, SM-T867V)
issue #6328

--- a/Tests/fixtures/tablet-3.yml
+++ b/Tests/fixtures/tablet-3.yml
@@ -9066,7 +9066,7 @@
   device:
     type: tablet
     brand: SA
-    model: Galaxy Tab A with S Pen (2019)
+    model: GALAXY Tab A 8.0" with S Pen (2019) LTE
   os_family: Android
   browser_family: Chrome
 - 
@@ -9086,7 +9086,7 @@
   device:
     type: tablet
     brand: SA
-    model: GALAXY Tab Active
+    model: GALAXY Tab Active 8.0"
   os_family: Android
   browser_family: Chrome
 - 
@@ -9106,7 +9106,7 @@
   device:
     type: tablet
     brand: SA
-    model: GALAXY Tab Active 2
+    model: GALAXY Tab Active 2 8.0"
   os_family: Android
   browser_family: Chrome
 - 
@@ -9126,7 +9126,7 @@
   device:
     type: tablet
     brand: SA
-    model: GALAXY Tab Active 2
+    model: GALAXY Tab Active 2 8.0"
   os_family: Android
   browser_family: Chrome
 - 
