Improve detection of WebOS
fixes #5713

--- a/regexes/oss.yml
+++ b/regexes/oss.yml
@@ -184,7 +184,7 @@
 ##########
 # webOS
 ##########
-- regex: '(?:webOS|Palm webOS)(?:/(\d+[\.\d]+))?'
+- regex: '(?:webOS|web0S|Palm webOS)(?:/(\d+[\.\d]+))?'
   name: 'webOS'
   version: '$1'
 
