feat(device) detect brand Samsung models: GALAXY View 18.4" LTE (SM-T677A),  GALAXY A50 (SM-505FN), GALAXY A10e (SM-A102N, SM-A102W), GALAXY A10 (SM-A105N),  GALAXY A20 (SM-A205U, SM-A205U1), GALAXY Note Pro 12.2" (SM-P902),  GALAXY Tab 4 7.0" LTE (SM-T237P), GALAXY J3 Pro (SM-J3119),  GALAXY A3 (2016) (SM-A310X), ALAXY A5 (2016) (SM-A510X)
issue #6328

--- a/regexes/device/mobiles.yml
+++ b/regexes/device/mobiles.yml
@@ -10323,6 +10323,9 @@ Samsung:
     - regex: '(?:SAMSUNG-)?(?:GT-)?N5100'
       device: 'tablet'
       model: 'GALAXY Note 8.0"'
+    - regex: '(?:SAMSUNG-)?SM-T677A'
+      device: 'tablet'
+      model: 'GALAXY View 18.4" LTE'
     - regex: '(?:SAMSUNG-)?(?:GT-)?N5110'
       device: 'tablet'
       model: 'GALAXY Note 8.0" WiFi'
@@ -10452,7 +10455,7 @@ Samsung:
     - regex: '(?:SAMSUNG-)?SM-T23[15]|403SC'
       device: 'tablet'
       model: 'GALAXY Tab 4 7.0" 3G'
-    - regex: '(?:SAMSUNG-)?SM-T239'
+    - regex: '(?:SAMSUNG-)?SM-(?:T239|T237P)'
       device: 'tablet'
       model: 'GALAXY Tab 4 7.0" LTE'
     - regex: '(?:SAMSUNG-)?SM-T310'
@@ -10581,6 +10584,9 @@ Samsung:
     - regex: '(?:SAMSUNG-)?SM-T39[057][U]?[);/ ]'
       device: 'tablet'
       model: 'GALAXY Tab Active 2 8.0"'
+    - regex: '(?:SAMSUNG-)?SM-P902[);/ ]'
+      device: 'tablet'
+      model: 'GALAXY Note Pro 12.2"'
 
     # explicit wearable models
     - regex: '(?:SAMSUNG )?SM-R820'
@@ -10856,7 +10862,7 @@ Samsung:
       model: 'GALAXY A2 Core'
     - regex: '(?:SAMSUNG-)?SM-A300(?:FU|YZ|[09FGHMY])'
       model: 'GALAXY A3 (2015)'
-    - regex: '(?:SAMSUNG-)?SM-A310(?:N0|[FMY])'
+    - regex: '(?:SAMSUNG-)?SM-A310(?:N0|[FMYX])'
       model: 'GALAXY A3 (2016)'
     - regex: '(?:SAMSUNG-)?SM-A320(?:FL|[FYX])'
       model: 'GALAXY A3 (2017)'
@@ -10866,7 +10872,7 @@ Samsung:
       model: 'GALAXY A5 Duos'
     - regex: '(?:SAMSUNG-)?SM-A500(?:FU|X)'
       model: 'GALAXY A5 (2015)'
-    - regex: '(?:SAMSUNG-)?SM-A510[08FKLMSY]'
+    - regex: '(?:SAMSUNG-)?SM-A510[08FKLMSYX]'
       model: 'GALAXY A5 (2016)'
     - regex: '(?:SAMSUNG-)?SM-A520[FKLSW]'
       model: 'GALAXY A5 (2017)'
@@ -10910,15 +10916,15 @@ Samsung:
       model: 'GALAXY A9 Star'
     - regex: '(?:SAMSUNG-)?SM-(?:A910[0F]|G887N)'
       model: 'GALAXY A9 Pro'
-    - regex: '(?:SAMSUNG-)?SM-A105[FGM]'
+    - regex: '(?:SAMSUNG-)?SM-A105[FGMN]'
       model: 'GALAXY A10'
     - regex: '(?:SAMSUNG-)?SM-A107[FM]'
       model: 'GALAXY A10s'
-    - regex: '(?:SAMSUNG-)?SM-(?:S102DL|A102U)'
-      model: 'GALAXY A10e'                # 2019
+    - regex: '(?:SAMSUNG-)?SM-(?:S102DL|A102[NWU])'
+      model: 'GALAXY A10e'
     - regex: '(?:SAMSUNG-)?SM-A115F'
       model: 'GALAXY A11'
-    - regex: '(?:SAMSUNG-)?SM-(?:A205(?:[FGSW]|YN)|S205DL)|SC-02M|SCV46'
+    - regex: '(?:SAMSUNG-)?SM-(?:A205(?:[FGSWU]|YN|U1)|S205DL)|SC-02M|SCV46'
       model: 'GALAXY A20'
     - regex: '(?:SAMSUNG-)?SM-A217F[);/ ]'
       model: 'GALAXY A21s'
@@ -10938,7 +10944,7 @@ Samsung:
       model: 'GALAXY A40s'
     - regex: '(?:SAMSUNG-)?SM-A415F'
       model: 'GALAXY A41'
-    - regex: '(?:SAMSUNG-)?SM-(?:A505(?:F[NG]|[FGNWU]|YN|U1?)|S506DL)'
+    - regex: '(?:SAMSUNG-)?SM-(?:A505(?:F[NG]|[FGNWU]|YN|U1?)|S506DL|505FN)'
       model: 'GALAXY A50'
     - regex: '(?:SAMSUNG-)?SM-A5070[);/ ]'
       model: 'GALAXY A50s'
@@ -10976,7 +10982,7 @@ Samsung:
       model: 'GALAXY J2 Pro'
     - regex: '(?:SAMSUNG-)?SM-S367VL'
       model: 'GALAXY J3 Orbit'
-    - regex: '(?:SAMSUNG-)?SM-J311(?:0|9S)'
+    - regex: '(?:SAMSUNG-)?SM-J311(?:[09]|9S)'
       model: 'GALAXY J3 Pro'
     - regex: '(?:SAMSUNG-)?SM-J327(?:T1|[ATW])[);/ ]'
       model: 'GALAXY J3 Prime'
