feat(device) detect brand Samsung models: GALAXY Xcover 3 (SM-G389F),  GALAXY A7 (2016) (SM-A710X), GALAXY Grand Prime (SM-G5309W, SM-G530P, SM-G530R4),  GALAXY Grand Prime VE Duos (SM-G531BT), GALAXY On5 (SM-G550T, SM-G550T1, SM-G550T2)  GALAXY On5 (2016) (SM-G5528)
issue #6328

--- a/regexes/device/mobiles.yml
+++ b/regexes/device/mobiles.yml
@@ -10738,6 +10738,8 @@ Samsung:
       model: 'GALAXY S DUOS 3'
     - regex: '(?:SAMSUNG-)?GT-S7710'
       model: 'GALAXY Xcover 2'
+    - regex: '(?:SAMSUNG-)?SM-G389F'
+      model: 'GALAXY Xcover 3'
     - regex: '(?:SAMSUNG-)?SM-G715FN'
       model: 'GALAXY Xcover Pro'
     - regex: '(?:SAMSUNG-)?SM-G398FN'
@@ -10886,7 +10888,7 @@ Samsung:
       model: 'GALAXY A60'
     - regex: '(?:SAMSUNG-)?SM-A700(?:YD|[09FHKLS])'
       model: 'GALAXY A7'
-    - regex: '(?:SAMSUNG-)?SM-A710[08FKLMSY]'
+    - regex: '(?:SAMSUNG-)?SM-A710[08FKLMSYX]'
       model: 'GALAXY A7 (2016)'
     - regex: '(?:SAMSUNG-)?SM-A720[FS]'
       model: 'GALAXY A7 (2017)'
@@ -11087,8 +11089,10 @@ Samsung:
       model: 'GALAXY Alpha'
     - regex: '(?:SAMSUNG-)?SM-G910S'
       model: 'GALAXY Round'
-    - regex: '(?:SAMSUNG-)?SM-(?:G550FY|G55[01]0|G5520)'
+    - regex: '(?:SAMSUNG-)?SM-(?:G550(?:FY|T[12]?)|G55[01]0|G5520)'
       model: 'GALAXY On5'
+    - regex: '(?:SAMSUNG-)?SM-G5528'
+      model: 'GALAXY On5 (2016)'
     - regex: '(?:SAMSUNG-)?SM-G600(?:FY|[0F])'
       model: 'GALAXY On7'     
     - regex: '(?:SAMSUNG-)?SM-G610[0KLS]'
@@ -11167,8 +11171,11 @@ Samsung:
       device: 'phablet'
     - regex: '(?:SAMSUNG-)?SM-G720(?:AX|N0|2)[);/ ]'
       model: 'GALAXY Grand Max'
-    - regex: '(?:SAMSUNG-)?SM-G53(?:0[FTYHWM]|0[AF]Z|1[FH]|08W|0MU|0BT)[);/ ]'
+    - regex: '(?:SAMSUNG-)?SM-G53(?:0[FTYHWMP]|0[AF]Z|1[FH]|0[89]W|0MU|0BT|0R4)[);/ ]'
       model: 'GALAXY Grand Prime'
+      device: 'phablet'
+    - regex: '(?:SAMSUNG-)?SM-G531BT[);/ ]'
+      model: 'GALAXY Grand Prime VE Duos'
       device: 'phablet'
     - regex: '(?:SAMSUNG-)?SM-G532F[);/ ]'
       model: 'GALAXY Grand Prime Plus' # also GALAXY J2 Prime
