feat(app) detect app HeyTabBrowser
issue #6307

--- a/regexes/client/mobile_apps.yml
+++ b/regexes/client/mobile_apps.yml
@@ -244,3 +244,8 @@
 - regex: 'UCURSOS/v([\d\.]+)'
   name: 'U-Cursos'
   version: '$1'
+
+# HeyTabBrowser or HeyTabAccount
+- regex: 'HeyTapBrowser/([\d\.]+)'
+  name: 'HeyTapBrowser'
+  version: '$1'
