--- a/Tests/fixtures/mobile_apps.yml
+++ b/Tests/fixtures/mobile_apps.yml
@@ -526,3 +526,21 @@
     model: GALAXY Tab A 10.1" (2019)
   os_family: Android
   browser_family: Unknown
+-
+  user_agent: Mozilla/5.0 (Linux; U; Android 10; zh-cn; PDEM10 Build/QKQ1.191222.002) AppleWebKit/537.36 (KHTML, like Gecko) Version/4.0 Chrome/70.0.3538.80 Mobile Safari/537.36 HeyTapBrowser/40.7.4.1
+  os:
+    name: Android
+    short_name: AND
+    version: "10"
+    platform: ""
+  client:
+    type: mobile app
+    name: HeyTapBrowser
+    version: 40.7.4.1
+  device:
+    type: smartphone
+    brand: OP
+    model: Find X2
+  os_family: Android
+  browser_family: Unknown
+
