feat(device) detect brand Phonemax model: Saturn
issue #6330

--- a/regexes/device/mobiles.yml
+++ b/regexes/device/mobiles.yml
@@ -15978,11 +15978,13 @@ Asano:
 
 # Phonemax
 Phonemax:
-  regex: 'PHONEMAX[_ ](Saturn[_ ]X|Mars)[);/ ]'
+  regex: 'PHONEMAX[_ ](Saturn(?:[_ ]X)?|Mars)[);/ ]'
   device: 'smartphone'
   models:
     - regex: 'PHONEMAX[_ ]Saturn[_ ]X[);/ ]'
       model: 'Saturn X'
+    - regex: 'PHONEMAX[_ ]Saturn[);/ ]'
+      model: 'Saturn'
     - regex: 'PHONEMAX[_ ]Mars[);/ ]'
       model: 'Mars'
 
