feat(device) detect brand Sony model: Xperia Tablet Z3 Compact (SGP611, SGP612) feat(device) detect brand Minix model: NEO U9H feat(device) detect brand Xiaomi model: MiTV 4A (ANSM0) feat(device) detect brand Sugar model: F7 Mini
issue #6355

--- a/regexes/device/mobiles.yml
+++ b/regexes/device/mobiles.yml
@@ -4600,7 +4600,7 @@ Sony:
     - regex: 'SGP(?:511|512|521)[);/ ]|SO-05F'
       model: 'Xperia Tablet Z2'
       device: 'tablet'
-    - regex: 'SGP(?:6[24]1)[);/ ]'
+    - regex: 'SGP(?:6[124]1|612)[);/ ]'
       model: 'Xperia Tablet Z3 Compact'
       device: 'tablet'
     - regex: 'SGPT(?:12|121|122|123|13|131|132|133)[);/ ]'
@@ -5494,7 +5494,7 @@ Hoozo:
 
 # Minix (minix.us)
 Minix:
-  regex: 'NEO-(?:X8-H|X[57]-mini|X8H-PLUS|X88-?I|X7-216A|X5-116A|X[68]|U1|Z64)[);/ ]'
+  regex: 'NEO-(?:X8-H|U9-H|X[57]-mini|X8H-PLUS|X88-?I|X7-216A|X5-116A|X[68]|U1|Z64)[);/ ]'
   device: 'tv'
   models:
     - regex: 'NEO-X8-H[);/ ]'
@@ -5515,6 +5515,8 @@ Minix:
       model: 'NEO U1'
     - regex: 'NEO-Z64[);/ ]'
       model: 'NEO Z64'
+    - regex: 'NEO-U9-H[);/ ]'
+      model: 'NEO U9H'
 
 # Huawei
 Huawei:
@@ -13592,7 +13594,7 @@ Xiaomi:
     - regex: 'MiTV-MSSP1[);/ ]'
       model: 'MiTV 4S'
       device: 'tv'
-    - regex: '(?:MiTV-AXSO0|MiTV4A)[);/ ]'
+    - regex: '(?:MiTV-AXSO0|MiTV4(?:A|-ANSM0))[);/ ]'
       model: 'MiTV 4A'
       device: 'tv'
     - regex: '(MiTV)(4[CSX]|4)[);/ ]'
@@ -15618,11 +15620,13 @@ Kuliao:
 
 # Sugar
 Sugar:
-  regex: 'SUGAR (?:C[12]1|[YF]11|[YFS]9|C6|Y7|Y8|Y1[25])[);/ ]'
+  regex: 'SUGAR (?:C[12]1|[YF]11|[YFS]9|C6|[FY]7|Y8|Y1[25])[);/ ]'
   device: 'smartphone'
   models:
     - regex: 'SUGAR Y([78]) MAX[);/ ]'
       model: 'Y$1 Max'
+    - regex: 'SUGAR F7 Mini[);/ ]'
+      model: 'F7 Mini'
     - regex: 'SUGAR (C[12]1|[YF]11|[YFS]9|C6|Y7|Y1[25])[);/ ]'
       model: '$1'
 
