feat(device) detect brand Samsung models:  GALAXY Tab A 10.1" with S Pen (2016) LTE (SM-P587)  GALAXY J7 (2017) (SM-J727R4), GALAXY J2 Core (SM-J260Y),  GALAXY E5 (SM-E5000), GALAXY Tab S2 8.0" WiFi (SM-T710X) issue #6328

--- a/regexes/device/mobiles.yml
+++ b/regexes/device/mobiles.yml
@@ -10400,6 +10400,9 @@ Samsung:
     - regex: '(?:SAMSUNG-)?SM-P905'
       device: 'tablet'
       model: 'GALAXY NotePRO 12.2" LTE'
+    - regex: '(?:SAMSUNG-)?SM-P587[);/ ]'
+      device: 'tablet'
+      model: 'GALAXY Tab A 10.1" with S Pen (2016) LTE'
     - regex: '(?:SAMSUNG-)?SM-P205[);/ ]'
       device: 'tablet'
       model: 'GALAXY Tab A 8.0" with S Pen (2019) LTE'
@@ -10514,7 +10517,7 @@ Samsung:
     - regex: '(?:SAMSUNG-)?SM-(?:T719[YC]?|T715(?:[YC]|N0)?)[);/ ]'
       device: 'tablet'
       model: 'GALAXY Tab S2 8.0" LTE'
-    - regex: '(?:SAMSUNG-)?SM-T71[03][);/ ]'
+    - regex: '(?:SAMSUNG-)?SM-(?:T71[03]|T710X)[);/ ]'
       device: 'tablet'
       model: 'GALAXY Tab S2 8.0" WiFi'
     - regex: '(?:SAMSUNG-)?SM-(?:T815|T817[ATW]?|T819[Y]?)'
@@ -10658,7 +10661,7 @@ Samsung:
       model: 'GALAXY Core Advance'
     - regex: '(?:SAMSUNG-)?GT-I8730'
       model: 'GALAXY Express'
-    - regex: '(?:SAMSUNG-)?SM-E500(?:F|H|HQ|M)'
+    - regex: '(?:SAMSUNG-)?SM-E500(?:HQ|[0FHM])'
       model: 'GALAXY E5'
     - regex: '(?:SAMSUNG-)?SM-E700(?:0|9|F|H|M)'
       model: 'GALAXY E7'
@@ -10980,7 +10983,7 @@ Samsung:
       model: 'GALAXY J2'
     - regex: '(?:SAMSUNG-)?SM-J260AZ'
       model: 'GALAXY J2 Pure'
-    - regex: '(?:SAMSUNG-)?SM-(?:J260([AFGM]|T1)|S260DL)'
+    - regex: '(?:SAMSUNG-)?SM-(?:J260([AFGMY]|T1)|S260DL)'
       model: 'GALAXY J2 Core'
     - regex: '(?:SAMSUNG-)?SM-J(?:210F|250[FMGY])'
       model: 'GALAXY J2 Pro'
@@ -11032,7 +11035,7 @@ Samsung:
       model: 'GALAXY J7 (2015)'
     - regex: '(?:SAMSUNG-)?SM-(?:J700(?:T1|T)|J710GN|J7109)'
       model: 'GALAXY J7 (2016)'
-    - regex: '(?:SAMSUNG-)?SM-(?:J730[K]|J727[USF])'
+    - regex: '(?:SAMSUNG-)?SM-(?:J730[K]|J727(?:[USF]|R4))'
       model: 'GALAXY J7 (2017)'
     - regex: '(?:SAMSUNG-)?SM-J737(?:[AVPUS]|T1?|VPP|R4)[);/ ]'
       model: 'GALAXY J7 (2018)'
