feat(device) detect brand Sharp models: Aquos R2 Compact (803SH), Aquos S Mini (SHV33),  Aquos Xx3 Mini (603SH), Aquos S (SHV40_u) feat(device) detect brand Kyocera model: Qua Phone (KYV37)

--- a/regexes/device/mobiles.yml
+++ b/regexes/device/mobiles.yml
@@ -7094,7 +7094,7 @@ K-Touch:
 
 # kyocera (kyocera.co.jp, kyocera.com)
 Kyocera:
-  regex: 'Kyocera|KWC-|QC-|(?:NP501KC|503KC|602KC|705KC|C51[27]0|C5155|C5215|C67[35]0|C6522N?|C6530N|C6740N?|C6743|E6[89]10|KYL2[13]|KYV31|KYV3[3-68]|KYF3[179]|KYY2[1-4]|S2151|KC-S701|S4-KC|KYV40U|KYV4[1-6]|KYV47-u|KC-S301AE|X3-KC|S6-KC|E6560[CT]|E6782[L]?|E6790(?:TM)?)[;/) ]'
+  regex: 'Kyocera|KWC-|QC-|(?:NP501KC|503KC|602KC|705KC|C51[27]0|C5155|C5215|C67[35]0|C6522N?|C6530N|C6740N?|C6743|E6[89]10|KYL2[13]|KYV3[17]|KYV3[3-68]|KYF3[179]|KYY2[1-4]|S2151|KC-S701|S4-KC|KYV40U|KYV4[1-6]|KYV47-u|KC-S301AE|X3-KC|S6-KC|E6560[CT]|E6782[L]?|E6790(?:TM)?)[;/) ]'
   device: 'smartphone'
   models:
     # explicit smartphone models
@@ -7158,6 +7158,8 @@ Kyocera:
       model: 'Basio 3'
     - regex: '705KC[;/) ]'
       model: 'Kantan Sumaho'
+    - regex: 'KYV37[;/) ]'
+      model: 'Qua Phone'
     - regex: 'KYV42[;/) ]'
       model: 'Qua Phone QX'
     - regex: 'KYV44[;/) ]'
@@ -11991,12 +11993,14 @@ Spice:
 
 # Sharp (jp.sharp)
 Sharp:
-  regex: 'SHARP|SBM|SH-?[0-9]+[a-z]?[);/ ]|AQUOS|(?:SH-M0[589]|S[35]-SH|SH-Z(10|01)|SH-[CL]02|[45]02SH|[36]05SH|70[126]SH|80[18]SH|901SH|50[3679]SH|SHL22|SHV4[0-7]|SHV3[5689]|FS80(?:1[08]|32|28|0[29])|TG-L900S|NP601SH)[);/ ]'
+  regex: 'SHARP|SBM|SH-?[0-9]+[a-z]?[);/ ]|AQUOS|(?:SH-M0[589]|S[35]-SH|SH-Z(10|01)|SH-[CL]02|[45]02SH|[36]05SH|70[126]SH|80[138]SH|901SH|50[3679]SH|SHL22|SHV4[0-7]|SHV3[35689]|FS80(?:1[08]|32|28|0[29])|TG-L900S|NP601SH|603SH|SHV40_u)[);/ ]'
   device: 'smartphone'
   models:
     # explicit smartphone models
     - regex: '506SH[);/ ]'
       model: 'Aquos Xx3'
+    - regex: '603SH[);/ ]'
+      model: 'Aquos Xx3 Mini'
     - regex: '50[23]SH[);/ ]'
       model: 'Aquos Xx2'
     - regex: '507SH[);/ ]'
@@ -12025,6 +12029,8 @@ Sharp:
       model: 'Aquos R Compact'
     - regex: '(?:SH-M09|SHV42|706SH|SH-03K)[);/ ]'
       model: 'Aquos R2'
+    - regex: '803SH[);/ ]'
+      model: 'Aquos R2 Compact'
     - regex: 'SH-C02[);/ ]'
       model: 'Aquos V'
     - regex: '(?:SH-02J|SH-04G)[);/ ]'
@@ -12039,11 +12045,11 @@ Sharp:
       model: 'Aquos 3'
     - regex: 'NP601SH[);/ ]'
       model: 'Aquos 2'
-    - regex: 'SHV40[);/ ]'
+    - regex: 'SHV40(?:_u)?[);/ ]'
       model: 'Aquos S'
     - regex: '702SH[);/ ]'
       model: 'Aquos S Basic'
-    - regex: 'SHV38[);/ ]'
+    - regex: 'SHV3[83][);/ ]'
       model: 'Aquos S Mini'
     - regex: '(?:FS8010|SH-M08|SHV43|SH-01[KL])[);/ ]'
       model: 'Aquos S2'
