--- a/Tests/fixtures/tablet-4.yml
+++ b/Tests/fixtures/tablet-4.yml
@@ -4208,7 +4208,7 @@
   device:
     type: tablet
     brand: TZ
-    model: X-pad NAVI 10 3G
+    model: X-pad NAVI 10.0" 3G
   os_family: Android
   browser_family: Chrome
 - 
@@ -4228,7 +4228,7 @@
   device:
     type: tablet
     brand: TZ
-    model: X-pad NAVI 7.3 3G
+    model: X-pad NAVI 7.3" 3G
   os_family: Android
   browser_family: Chrome
 - 
@@ -4248,7 +4248,7 @@
   device:
     type: tablet
     brand: TZ
-    model: X-pad NAVI 7.4 3G
+    model: X-pad NAVI 7.4" 3G
   os_family: Android
   browser_family: Chrome
 - 
@@ -4268,7 +4268,7 @@
   device:
     type: tablet
     brand: TZ
-    model: X-pad NAVI 8.2 3G
+    model: X-pad NAVI 8.2" 3G
   os_family: Android
   browser_family: Opera
 - 
@@ -4328,7 +4328,7 @@
   device:
     type: tablet
     brand: TZ
-    model: X-pad Rapid 8.2 4G
+    model: X-pad Rapid 8.2" 4G
   os_family: Android
   browser_family: Chrome
 - 
@@ -4348,7 +4348,7 @@
   device:
     type: tablet
     brand: TZ
-    model: X-pad Style 10
+    model: X-pad Style 10.0"
   os_family: Android
   browser_family: Opera
 - 
@@ -4368,7 +4368,7 @@
   device:
     type: tablet
     brand: TZ
-    model: X-pad Style 10 3G
+    model: X-pad Style 10.0" 3G
   os_family: Android
   browser_family: Chrome
 - 
