--- a/regexes/device/mobiles.yml
+++ b/regexes/device/mobiles.yml
@@ -12377,7 +12377,7 @@ Tesco:
 
 # teXet
 teXet:
-  regex: 'Texet|(NaviPad [^/;]*) Build|TM-(?:1046|1058|1057|1067|3000|3200R|3500|4003|4071|450[34]|451[30]|4377|4082R|550[83]|5010|5017|507[4-7]|5[23]77|6003|6906|702[13]|7055HD|709[69]|9747BT|9758|9751HD|9767|5513|520[410]|5505|507[13]|5581|7859|8044|9748[ _]3G|9720|7047HD[ _]3G|9757|9740|4982|4515|4083|500[3567]|5571|3204R|5016|8043|7047HD[ _]3G|8041HD|8066|705[23]|7041|8041HD|8051|8048|974[96]|973[78]W|974[170]|9743W|9750HD|7043XD|7049|7887|7037W|702[46])|TB-(771A|711A)|X-Force[\(-]?TM-5009\)?|X-Plus[\(-]?TM-5577\)?|X-pad (?:AIR 8|iX 7) 3G'
+  regex: 'Texet|(NaviPad [^/;]*) Build|TM-(?:1046|1058|1057|1067|3000|3200R|3500|4003|4071|450[34]|451[30]|4377|4082R|550[83]|5010|5017|507[4-7]|5[23]77|6003|6906|702[13]|7055HD|709[69]|9747BT|9758|9751HD|9767|5513|520[410]|5505|507[13]|5581|7859|8044|9748[ _]3G|9720|7047HD[ _]3G|9757|9740|4982|4515|4083|500[3567]|5571|3204R|5016|8043|7047HD[ _]3G|8041HD|8066|705[23]|7041|8041HD|8051|8048|974[96]|973[78]W|974[170]|9743W|9750HD|7043XD|7049|7887|7037W|702[46])|TB-(771A|711A)|X-Force[\(-]?TM-5009\)?|X-Plus[\(-]?TM-5577\)?|X-pad (?:AIR 8|iX 7|NAVI 7.[35]|NAVI 10|SKY 8.1|STYLE 8|STYLE 10.1|HIT|LITE 7.[12]|QUAD (?:7.2|10|7)|SHINE 8.1)(?: 3G)?'
   device: 'tablet'
   models:
     - regex: 'TM-9749'
@@ -12395,23 +12395,45 @@ teXet:
     - regex: 'TM-7055HD'
       model: 'NaviPad 3G'
     - regex: 'TM-9758'
-      model: 'X-pad Style 10'
+      model: 'X-pad Style 10.0"'
+    - regex: 'X-pad SHINE 8.1 3G'
+      model: 'X-pad Shine 8.1" 3G'
+    - regex: 'X-pad QUAD 10 3G'
+      model: 'X-pad Quad 10.0" 3G'
+    - regex: 'X-pad QUAD 7 3G'
+      model: 'X-pad Quad 7.0" 3G'
+    - regex: 'X-pad QUAD 7.2 3G'
+      model: 'X-pad Quad 7.2" 3G'
+    - regex: 'X-pad STYLE 8 3G'
+      model: 'X-pad Style 8.0" 3G'
+    - regex: 'X-pad HIT 3G'
+      model: 'X-pad Hit 3G'
+    - regex: 'X-pad LITE (7.[12])'
+      model: 'X-pad Lite $1"'
+    - regex: 'TM-9767'
+      model: 'X-pad Style 10.0" 3G'
+    - regex: 'X-pad STYLE 10.1 3G'
+      model: 'X-pad Style 10.1" 3G'
     - regex: '(X-pad (?:AIR 8|iX 7) 3G)'
       model: '$1'
-    - regex: 'TM-7096'
-      model: 'X-pad NAVI 7.3 3G'
+    - regex: 'TM-7096|X-pad NAVI 7.3 3G'
+      model: 'X-pad NAVI 7.3" 3G'
     - regex: 'TM-7099'
-      model: 'X-pad NAVI 7.4 3G'
-    - regex: 'TM-1046'
-      model: 'X-pad NAVI 10 3G'
+      model: 'X-pad NAVI 7.4" 3G'
+    - regex: 'X-pad NAVI 7.5 3G'
+      model: 'X-pad NAVI 7.5" 3G'
+    - regex: 'X-pad SKY 8.1 3G'
+      model: 'X-pad Sky 8.1" 3G'
+    - regex: 'TM-1046|X-pad NAVI 10 3G'
+      model: 'X-pad NAVI 10.0" 3G'
     - regex: 'TM-7859'
-      model: 'X-pad NAVI 8.2 3G'
+      model: 'X-pad NAVI 8.2" 3G'
     - regex: 'TM-7049'
       model: 'NaviPad TM-7049 3G'
     - regex: 'TM-7887'
       model: 'NaviPad TM-7887 3G'
     - regex: 'TM-8066'
-      model: 'X-pad Rapid 8.2 4G'
+      model: 'X-pad Rapid 8.2" 4G'
     - regex: '(TM-(?:1057|1067|6906|8043|9748[_ ]3G|9740|9757(?:[_ ]3G)?|7047HD[ _]3G|9747BT|9751HD|702[13]|705[23]|7041|9720|7047HD[_ ]3G|8044|8041HD|973[78]W|9743W|974[710]|9750HD|7043XD|7037W|702[46])|TB-(?:771A|711A|8041HD))'
       model: '$1'
     - regex: 'TM-4503'
@@ -12432,8 +12454,6 @@ teXet:
     - regex: 'TM-4515'
       device: 'smartphone'
       model: 'X-Style'
-    - regex: 'TM-9767'
-      model: 'X-pad Style 10 3G'
     - regex: 'TM-(5016|3500)'
       device: 'smartphone'
       model: 'X-Maxi 2'
