fix(device) rename Huawei model Y330-U05 => Ascend Y330 fix(device) rename Huawei model Y320-U10 => Ascend Y320

--- a/regexes/device/mobiles.yml
+++ b/regexes/device/mobiles.yml
@@ -5536,8 +5536,10 @@ Huawei:
       model: '9S'
     - regex: 'U9500[);/ ]'
       model: 'Ascend D1'
-    - regex: 'Y320-U10[);/ ]'
+    - regex: 'Y320-(?:U10|T00|U05)[);/ ]'
       model: 'Ascend Y320'
+    - regex: 'Y330-U05[);/ ]'
+      model: 'Ascend Y330'
     - regex: 'Y541-U02[);/ ]'
       model: 'Ascend Y5C'
     - regex: 'U8818[);/ ]'
@@ -5938,8 +5940,6 @@ Huawei:
       model: 'Y3 (2017)'
     - regex: 'CAG-L[02]2[);/ ]'
       model: 'Y3 (2018)'
-    - regex: 'Bucare Y330-U05[);/ ]'
-      model: 'Y330-U05'
     - regex: 'LUA-(U22|L2[12]|U03)[);/ ]'
       model: 'Y3II'
     - regex: 'MYA-(?:L(?:02|03|2[23])|U29)[);/ ]'
