--- a/Tests/fixtures/smartphone-6.yml
+++ b/Tests/fixtures/smartphone-6.yml
@@ -2871,7 +2871,7 @@
   os_family: Android
   browser_family: Android Browser
 - 
-  user_agent: 'Mozilla/5.0 (Linux; U; Android 4.1.1; zh-cn; HW-HUAWEI_Y300C/Y300CV100R001C92B168; 480*800; CTC/2.0) AppleWebKit/534.30 (KHTML, like Gecko) Mobile Safari/534.30'
+  user_agent: Mozilla/5.0 (Linux; U; Android 4.1.1; zh-cn; HW-HUAWEI_Y300C/Y300CV100R001C92B168; 480*800; CTC/2.0) AppleWebKit/534.30 (KHTML, like Gecko) Mobile Safari/534.30
   os:
     name: Android
     short_name: AND
@@ -2907,7 +2907,7 @@
   device:
     type: smartphone
     brand: HU
-    model: Y320-T00
+    model: Ascend Y320
   os_family: Android
   browser_family: Unknown
 - 
@@ -2927,7 +2927,7 @@
   device:
     type: smartphone
     brand: HU
-    model: Y320-U10
+    model: Ascend Y320
   os_family: Android
   browser_family: Android Browser
 - 
@@ -2947,7 +2947,7 @@
   device:
     type: smartphone
     brand: HU
-    model: Y330-U05
+    model: Ascend Y330
   os_family: Android
   browser_family: Chrome
 - 
