feat(device) detect brand Navon models: Supreme Fine, Supreme Fine Mini, Supreme Fine Plus, Supreme Chief, Supreme Pure Plus, Supreme Pro issue #6355

--- a/regexes/device/mobiles.yml
+++ b/regexes/device/mobiles.yml
@@ -9037,11 +9037,23 @@ M.T.T.:
 
 # Navon
 Navon:
-  regex: 'Superme_Max'
+  regex: '(?:Superme_Max|Supreme[_ ](?:Fine|Chief|Pure|Pro)(?:[_ ](?:Mini|Plus))?)[);/ ]'
   device: 'smartphone'
   models:
-    - regex: 'Superme_Max'
+    - regex: 'Superme_Max[);/ ]'
       model: 'Supreme Max'
+    - regex: 'Supreme_Fine_Mini[);/ ]'
+      model: 'Supreme Fine Mini'
+    - regex: 'Supreme[_ ]Fine[_ ]Plus[);/ ]'
+      model: 'Supreme Fine Plus'
+    - regex: 'Supreme_Fine[);/ ]'
+      model: 'Supreme Fine'
+    - regex: 'Supreme[_ ]Chief[);/ ]'
+      model: 'Supreme Chief'
+    - regex: 'Supreme[_ ]Pure[ _]Plus[);/ ]'
+      model: 'Supreme Pure Plus'
+    - regex: 'Supreme[_ ]Pro[);/ ]'
+      model: 'Supreme Pro'
 
 # NOA
 NOA:
