feat(device) detect new brand SQOOL models: V41, V4 feat(device) detect new brand TurboKids models: TMNT, 3G feat(device) detect brand Majestic model: Urano 77 LTE feat(device) detect brand Turbo-X model: S3
issue #6355

--- a/regexes/device/mobiles.yml
+++ b/regexes/device/mobiles.yml
@@ -8195,9 +8195,11 @@ Mpman:
 
 # Majestic
 Majestic:
-  regex: 'MAJESTIC[ _-]|CRONO ?[0-9]+|TAB (?:647|411) 3G'
+  regex: 'MAJESTIC[ _-]|CRONO ?[0-9]+|TAB (?:647|411) 3G|URANO 77LTE'
   device: 'smartphone'
   models:
+      - regex: 'URANO 77LTE[);/ ]'
+        model: 'Urano 77 LTE'
       - regex: 'TAB (647|411) 3G'
         model: 'Tab $1 3G'
         device: 'tablet'
@@ -11966,9 +11968,11 @@ Sendo:
 
 # Turbo-X
 Turbo-X:
-  regex: 'Turbo-X|Hive V 3G'
+  regex: 'Turbo-X|Hive V 3G|Turbox_S3'
   device: 'smartphone'
   models:
+    - regex: 'Turbox_S3'
+      model: 'S3'
     - regex: 'Turbo-X Ice[);/ ]'
       device: 'tablet'
       model: 'Ice'
@@ -16216,4 +16220,16 @@ Alfawise:
 Klipad:
   regex: '(KL-V905)[);/ ]'
   device: 'smartphone'
+  model: '$1'
+
+# SQOOL (sqool.fr)
+SQOOL:
+  regex: 'SQOOL-V(41?)[);/ ]'
+  device: 'tablet'
+  model: 'V$1'
+
+# TurboKids
+TurboKids:
+  regex: 'Turbokids[-_ ]?(TMNT|3G|S4)[);/ ]'
+  device: 'tablet'
   model: '$1'
